--- a/MusicShop/.settings/org.eclipse.core.resources.prefs
+++ b/MusicShop/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/impTest/NewTest.jsp=UTF-8
 encoding//src/main/webapp/style.css=UTF-8
 encoding/<project>=MS949
